--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,14 +7,16 @@ website:
   title: "ArseneLaurent"
   navbar:
     left:
-      - text: Home
-        href: index.qmd
-      - text: Mini-Project 2
-        href: ds002_project2.qmd
-      - text: Project 3
-        href: ds002_project3.qmd
-      - text: Project 4
-        href: Project_4.qmd
+      - text: Projects
+        menu:
+         - text: Home
+           href: index.qmd
+         - text: Mini-Project 2
+           href: ds002_project2.qmd
+         - text: Project 3
+           href: ds002_project3.qmd
+         - text: Project 4
+           href: Project_4.qmd
     right: 
       - text: "Data Viz"
         menu: 
