Adding MineralID stuff

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,8 @@ website:
            href: Project_4.qmd
          - text: Project 5
            href: Project_5.qmd
+      - text: MineralID
+        href: MineralID_Database.qmd
     right: 
       - text: "Data Viz"
         menu: 
